force-app/main/default/objects/Account/fields/Total_Contact__c.field-meta.xml
<CustomField>
    <fullName>Total_Contact__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Total Contact</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>