force-app/main/default/objects/Account/fields/Total_customer_case__c.field-meta.xml
<CustomField>
    <fullName>Total_customer_case__c</fullName>
    <label>Total customer case</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>