force-app/main/default/objects/Account/fields/Valid_Phone__c.field-meta.xml
<CustomField>
    <fullName>Valid_Phone__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Valid Phone</label>
    <type>Checkbox</type>
</CustomField>