force-app/main/default/objects/Account/recordTypes/Wholesale_B2B.recordType-meta.xml
<RecordType>
    <fullName>Wholesale_B2B</fullName>
    <active>true</active>
    <label>Wholesale B2B</label>
</RecordType>