force-app/main/default/objects/Account/validationRules/Prevent_Duplicate_Accounts.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_Duplicate_Accounts</fullName>
    <active>true</active>
    <errorConditionFormula>isDuplicate__c</errorConditionFormula>
    <errorMessage>Alert ! Duplicate Account found</errorMessage>
</ValidationRule>