force-app/main/default/objects/Account/validationRules/Prevent_Empty_Address.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_Empty_Address</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(BillingCountry) || ISBLANK( BillingCity ) || ISBLANK(  BillingStreet ) || ISBLANK(   BillingPostalCode )|| ISBLANK( BillingState )</errorConditionFormula>
    <errorMessage>Billing Address cannot be empty</errorMessage>
</ValidationRule>